fix(product): fix Java 17 compatibility issue (getFirst -> get(0))